# solvela

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .mcp.json  ADDITIONAL_USE_GRANT.md  AGENTS.md  BACKERS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  HANDOFF.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-MIT  README.md  SECURITY.md  STATUS.md  docker-compose.yml  fly.toml
.claude/plan/: rustyclaw-ecosystem.md  rustyclawrouter.md
.githooks/: commit-msg  prepare-commit-msg
.github/: FUNDING.yml  dependabot.yml  licensee.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ai-sdk-provider-publish.yml  ai-sdk-provider.yml  ci.yml  dco.yml  deploy-staleness-check.yml  deploy.yml  mcp.yml  openclaw-provider.yml  release.yml
brand/: README.md  rasterize.mjs
config/: AGENTS.md  default.toml  models.toml  services.toml
crates/: AGENTS.md
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: AGENTS.md  main.rs
crates/cli/src/commands/: AGENTS.md  chat.rs  chat_repl.rs  doctor.rs  health.rs  init.rs  mod.rs  models.rs  recover.rs  solana_tx.rs  stats.rs  util.rs  wallet.rs  watch.rs
crates/cli/src/commands/loadtest/: config.rs  dispatcher.rs  metrics.rs  mod.rs  payment.rs  prometheus.rs  report.rs  worker.rs
crates/cli/src/commands/mcp/: config.rs  diff.rs  hosts.rs  merge.rs  mod.rs  openclaw.rs
crates/common/: Cargo.toml
crates/gateway/: AGENTS.md  Cargo.toml
crates/gateway/src/: AGENTS.md  audit.rs  balance_monitor.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  payment_util.rs  security.rs  service_health.rs  services.rs  session.rs  usage.rs
crates/gateway/src/a2a/: AGENTS.md  agent_card.rs  handler.rs  jsonrpc.rs  mod.rs  task_store.rs  types.rs
crates/gateway/src/cache/: mod.rs  request_dedup.rs
crates/gateway/src/middleware/: AGENTS.md  api_key.rs  metrics.rs  mod.rs  prompt_guard.rs  rate_limit.rs  request_id.rs  x402.rs
crates/gateway/src/orgs/: AGENTS.md  budget_projects.rs  mod.rs  models.rs  queries.rs
crates/gateway/src/providers/: AGENTS.md  anthropic.rs  deepseek.rs  demo.rs  fallback.rs  google.rs  health.rs  heartbeat.rs  mod.rs  openai.rs  stream_caps.rs  xai.rs
crates/gateway/src/routes/: AGENTS.md  admin_stats.rs  chat.rs  dashboard.rs  debug_headers.rs  escrow.rs  health.rs  images.rs  metrics.rs  mod.rs  models.rs  nonce.rs  orgs.rs  pricing.rs  proxy.rs  router.rs  services.rs  stats.rs  supported.rs
crates/gateway/src/routes/chat/: AGENTS.md  cost.rs  mod.rs  payment.rs  provider.rs  response.rs
crates/gateway/src/routes/orgs/: AGENTS.md  analytics.rs  api_keys.rs  audit.rs  budget.rs  crud.rs  mod.rs  projects.rs  teams.rs
crates/gateway/src/util/: mod.rs  schema_sanitize.rs  trust_tag.rs
crates/gateway/tests/: AGENTS.md  integration.rs  integration_a2a.rs  integration_chat_circuit.rs  integration_chat_misc.rs  integration_chat_request_debug.rs  integration_chat_session_id.rs  integration_misc_admin_metrics.rs  integration_misc_basic.rs  integration_misc_health_endpoints.rs  integration_misc_stats_session.rs  integration_payments_402.rs  integration_payments_escrow_endpoints.rs  integration_payments_escrow_flow.rs  integration_payments_misc.rs  integration_router_analyze.rs  integration_services.rs  migrations.rs
crates/gateway/tests/common/: mod.rs
crates/protocol/: AGENTS.md  Cargo.toml
crates/protocol/src/: AGENTS.md  chat.rs  constants.rs  cost.rs  lib.rs  model.rs  payment.rs  settlement.rs  streaming.rs  tools.rs  vision.rs
crates/router/: AGENTS.md  Cargo.toml
crates/router/src/: AGENTS.md  analyzer.rs  lib.rs  models.rs  profiles.rs  scorer.rs
crates/x402/: AGENTS.md  Cargo.toml
crates/x402-solana/: Cargo.toml
crates/x402-solana/src/: types.rs
crates/x402/src/: AGENTS.md  escrow.rs  facilitator.rs  fee_payer.rs  lib.rs  nonce_pool.rs  solana.rs  solana_rpc.rs  solana_types.rs  spl_transfer.rs  traits.rs  types.rs
crates/x402/src/escrow/: AGENTS.md  claim_processor.rs  claim_queue.rs  claimer.rs  deposit.rs  mod.rs  pda.rs  refund.rs  verifier.rs
dashboard/: AGENTS.md  next.config.mjs  package-lock.json  package.json  source.config.ts
dashboard/content/: AGENTS.md
dashboard/public/: AGENTS.md
dashboard/src/: AGENTS.md  proxy.ts
docs/: AGENTS.md  exit-readiness.md
docs/book/: AGENTS.md  book.toml
docs/decisions/: docs-source-pick.md
docs/demo/: README.md  b-roll.md  pre-record-checklist.md  script.md  shot-list.md
docs/grants/: README.md  solana-foundation-application.md  superteam-application.md
docs/launch-drafts/: README.md  anthropic-mcp-registry.json  blog-post-solvela-ai.md  cursor-directory-submission.md  hn-show-post.md  openclaw-docs-pr.md  solana-foundation-grant-update.md  x-thread.md
docs/load-tests/: 2026-04-12-results.md  AGENTS.md
docs/plans/: 2026-03-08-blockrun-competitive-analysis.md  2026-03-09-ecosystem-upgrade-plan.md  2026-03-09-sse-heartbeat-provider-failover.md  2026-03-10-extract-rustyclaw-protocol.md  2026-03-11-phase-f-sdks.md  (+11 more)
integrations/: AGENTS.md
loadtest/: AGENTS.md  Dockerfile  fly.toml  run.sh
migrations/: 001_initial_schema.sql  002_escrow_claim_queue.sql  003_phase_g_request_session_ids.sql  004_claim_queue_next_retry_at.sql  005_organizations.sql  006_audit_logs.sql  007_hourly_spend_limits.sql  008_budget_projects.sql  AGENTS.md
programs/: AGENTS.md
programs/escrow/: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml
programs/escrow/src/: AGENTS.md  errors.rs  lib.rs  state.rs
programs/escrow/src/instructions/: AGENTS.md  claim.rs  deposit.rs  mod.rs  refund.rs
programs/escrow/tests/: AGENTS.md  helpers.rs  integration.rs  unit.rs
scripts/: AGENTS.md  load-test.sh
sdks/: AGENTS.md
sdks/python/: AGENTS.md  README.md  pyproject.toml
sdks/python/rustyclawrouter/: AGENTS.md  __init__.py  client.py  config.py  types.py  wallet.py  x402.py
sdks/python/solvela/: AGENTS.md  __init__.py  client.py  config.py  types.py  wallet.py  x402.py
sdks/python/tests/: AGENTS.md  test_client.py  test_config.py  test_types.py  test_wallet.py  test_x402.py
(+414 files in other folders)
