[workspace]
resolver = "2"
members = [
    "crates/gateway",
    "crates/x402",
    "crates/router",
    "crates/cli",
    "crates/protocol",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/solvela-ai/solvela"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "set-header", "catch-panic"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Crypto
base64 = "0.22"
bs58 = "0.5"
bincode = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }

# Data stores
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros", "migrate"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Security
zeroize = { version = "1", features = ["derive"] }
lru = "0.17"

# URL parsing
url = "2"

# Environment
dotenvy = "0.15"

# Workspace crates
# Path + version dual-spec: `path` lets local dev resolve to the in-tree code;
# `version` is required by crates.io at publish time so consumers get the
# published artifact when they pull from the registry.
solvela-x402 = { path = "crates/x402", version = "0.1" }           # renamed from `x402` — that name is taken on crates.io
solvela-router = { path = "crates/router", version = "0.1" }
solvela-protocol = { path = "crates/protocol", version = "0.1" }
