[package]
name = "solvela-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "solvela"
path = "src/main.rs"

[dependencies]
solvela-x402 = { workspace = true }
solvela-router = { workspace = true }

clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
url = { workspace = true }
getrandom = { version = "0.2", features = ["std"] }
hdrhistogram = "7"
secrecy = "0.8"

[dev-dependencies]
wiremock = "0.6"
