[package]
name = "solvela-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Solvela LLM payment gateway — wallet, chat, models, escrow, MCP, load testing"
authors = ["Solvela Contributors"]
homepage = "https://solvela.ai"
keywords = ["solana", "llm", "x402", "cli", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "solvela"
path = "src/main.rs"

[dependencies]
solvela-x402 = { workspace = true }
solvela-router = { workspace = true }

clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
url = { workspace = true }
getrandom = { version = "0.2", features = ["std"] }
hdrhistogram = "7"
secrecy = "0.10"

[dev-dependencies]
wiremock = "0.6"
