[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "rustyclawrouter"
path = "src/main.rs"

[dependencies]
rcr-common = { workspace = true }
x402 = { workspace = true }
router = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Data stores
sqlx = { workspace = true }
redis = { workspace = true }

# Cache
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
