[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "rustyclawrouter"
path = "src/main.rs"

[dependencies]
rustyclaw-protocol = { workspace = true }
x402 = { workspace = true, features = ["postgres"] }
router = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Data stores
sqlx = { workspace = true }
redis = { workspace = true }

# Cache / crypto
sha2 = { workspace = true }
hmac = { workspace = true }
lru = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2"

# URL parsing / validation
url = { workspace = true }

# Config parsing
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
tokio-stream = "0.1"
