[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "solvela-gateway"
path = "src/main.rs"

[dependencies]
solvela-protocol = { workspace = true }
solvela-x402 = { workspace = true, features = ["solana", "postgres"] }
solvela-router = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Data stores
sqlx = { workspace = true }
redis = { workspace = true }

# Cache / crypto
sha2 = { workspace = true }
hmac = { workspace = true }
lru = { workspace = true }
hex = "0.4"
rand = "0.10"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2"
regex = "1"
once_cell = "1"

# URL parsing / validation
url = { workspace = true }

# Config parsing
toml = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
tokio-stream = "0.1"
