[package]
name = "solvela-protocol"
version = "0.1.0"
edition = "2021"
description = "Shared wire-format types for the Solvela ecosystem (x402 payment protocol + OpenAI-compatible chat types)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/solvela-ai/solvela"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
