[package]
name = "solvela-router"
version.workspace = true
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "15-dimension request scorer + routing profiles + model registry for the Solvela LLM payment gateway"
authors = ["Solvela Contributors"]
homepage = "https://solvela.ai"
keywords = ["solana", "llm", "routing", "x402", "ai"]
categories = ["api-bindings"]

[dependencies]
solvela-protocol = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
