[package]
name = "x402-solana"
version = "0.1.0"
edition = "2021"
description = "x402 payment protocol types and Solana constants"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sky64/RustyClawRouter"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
