[package]
name = "x402"
version.workspace = true
edition.workspace = true

[dependencies]
rcr-common = { workspace = true }
x402-solana = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
zeroize = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
postgres = ["sqlx"]
