[package]
name = "solvela-x402"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust implementation of the x402 payment protocol — Solana verification, escrow integration, fee payer pool, nonce pool. Powers the Solvela LLM gateway."
authors = ["Solvela Contributors"]
homepage = "https://solvela.ai"
keywords = ["x402", "solana", "usdc", "payments", "escrow"]
categories = ["api-bindings", "cryptography"]

[dependencies]
solvela-protocol = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
zeroize = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
postgres = ["sqlx"]
