[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solvela-sdk"
version = "0.1.0"
description = "Python SDK for Solvela — AI agent payments with USDC on Solana"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
solana = [
    "solders>=0.21",
    "solana>=0.34",
    "spl-token>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
